--- a/css/style-catalogue.scss
+++ b/css/style-catalogue.scss
@@ -214,6 +214,7 @@ main {
               letter-spacing: 0.04em;
               color: $main-blue;
               text-overflow: ellipsis;
+              font-family: 'Nova Slim', cursive, sans-serif;
             }
 
             .title-card {
