--- a/css/style-catalogue.css
+++ b/css/style-catalogue.css
@@ -184,6 +184,7 @@ main #section-catalog #container-catalog #container-cards .card .bottom-item-car
   letter-spacing: 0.04em;
   color: #0868ae;
   text-overflow: ellipsis;
+  font-family: "Nova Slim", cursive, sans-serif;
 }
 main #section-catalog #container-catalog #container-cards .card .bottom-item-card .title-card {
   font-size: 10px;
