--- a/css/style-book-detail.scss
+++ b/css/style-book-detail.scss
@@ -38,13 +38,13 @@ main {
     border-radius: 10px;
 
     p#loan-confimation {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       font-weight: bold;
       margin: 0 auto;
       margin-top: 10px;
       margin-bottom: 15px;
       font-family: "Hind Madurai", sans-serif;
-      color: $black;
+      color: $btn-red;
       text-align: center;
       margin-bottom: 260px;
     }
